--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,18 @@ body {
 }
 /* Отменяем подчеркивание у ссылки */
 
+.section-header .container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+
+}
+
+.container {
+    border: 1px solid tomato;
+}
+
 .list {
     list-style: none;
 }
@@ -104,29 +116,43 @@ ul {list-style: none;} */
 .site-nav .link .current a {
     color: var(--accent-color);
 }
+
 /* main */
 /* section-hero */
 
 .section-hero { 
     color: var(--accent-color-two);
     background-color: #2F303A;
+
+    text-align: center;
 }
 
 .section-hero-title {
+    
+    margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    background-color: tomato;
+    
+   
 }
 
 .buttom {
+    border: 1px solid transparent;
+    padding: 10px 32px;
+    min-width: 216px;
+    height: 50px;
+    
     color: var(--buttom-text-color);
     background-color: var(--buttom-background-color);
     font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.19;
     letter-spacing: 0.02em;
+    border-radius: 4px;
 
     cursor: pointer;
 }
@@ -274,9 +300,14 @@ background-color: var(--footer-color);
 }
 
 .section-title-portfolio-text {
+    width: 20px;
+    height: 20px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
 }
 
 /* продолжаем */
+
+
+
