--- a/css/styles.css
+++ b/css/styles.css
@@ -505,6 +505,7 @@ background-color: var(--footer-color);
 .filter-card {
     width: 370px;
     margin-right: 30px;
+    margin-bottom: 30px;
     background: var(--accent-color-two);
     border: 1px solid #EEEEEE;
     
@@ -516,9 +517,10 @@ background-color: var(--footer-color);
     
 }
 
-.filter-card:nth-child(n+7) {
-     
-   
+.filter-card:nth-last-child(-n + 3)
+ {
+     margin-bottom: 0;
+
 }
 
 .filter-card:hover,
